2011-09-28  Thomas Haller <thomas.haller@fen-net.de>

	* grub-core/loader/multiboot_elfxx.c (Elf_Shdr): Set according to
	loader.

2011-09-28  Andreas Born  <futur.andy@googlemail.com>

	Fix incorrect identifiers in bash-completion.

	* util/bash-completion.d/grub-completion.bash.in
	(_grub_mkpasswd-pbkdf2): Rename to ...
	(_grub_mkpasswd_pbkdf2): ... this. All users updated.
	(_grub_script-check): Rename to ...
	(_grub_script_check): ... this. All users updated.

2011-09-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (grub_util_biosdisk_is_floppy):
	Return 0 if disk isn't biosdisk.

2011-09-17  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* Makefile.util.def (grub-mkrelpath): Add LIBUTIL for getrawpartition(3)
	on NetBSD.
	* Makefile.util.def (grub-fstest): Likewise.

2011-09-17  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* grub-core/kern/emu/hostdisk.c (grub_util_get_fd_sectors) [__NetBSD__]:
	Get sector size from disk label.

2011-09-05  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig_lib.in (grub_file_is_not_garbage): Return 1 for
	*/README* as well as README*.
	Reported by: Axel Beckert.

2011-08-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/loongson/init.c (grub_machine_init): Handle the
	case of less than 256 MiB of RAM.

2011-08-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/wildcard.c (make_regex): Handle @.

2011-08-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Move cryptodisk logic to appropriate place.

2011-08-21 Szymon Janc <szymon@janc.net.pl>

	* acinclude.m4: Use AC_LANG_PROGRAM macro to generate source code for
	 AC_LANG_CONFTEST macros.

2011-08-20  Szymon Janc <szymon@janc.net.pl>

	Add grub-fstest option to uncompress data for commands.

	* util/grub-fstest.c (uncompress): New var.
	(options): New option -u.

2011-08-20  Szymon Janc <szymon@janc.net.pl>

	* grub-core/loader/i386/linux.c (grub_linux_setup_video): Add